--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classic Computing 2025</title>
+    <script>
+      function isModernBrowser() {
+        try {
+          return (
+            'fetch' in window &&
+            'Promise' in window &&
+            'assign' in Object &&
+            'from' in Array &&
+            'includes' in String.prototype
+          )
+        } catch (e) {
+          return false
+        }
+      }
+
+      if (!isModernBrowser()) {
+        window.location.href = '/home.html'
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
