don't consider seamonkey to be a modern browser
sorry folks

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
       function isModernBrowser() {
         try {
           return (
+            !navigator.userAgent.includes('SeaMonkey') &&
             'fetch' in window &&
             'Promise' in window &&
             'assign' in Object &&
